apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'

android {
    namespace 'com.midisheetmusic'
    compileSdk 35

    defaultConfig {
        applicationId "com.ditek.midisheetmusic"
        minSdk 21
        targetSdk 35
        versionCode 9
        versionName "2.6"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.txt'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    buildFeatures {
        viewBinding true
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/library-core_release.kotlin_module']
        }
    }
}

repositories {
    maven {
        url 'https://github.com/joytunes/USB-MIDI-Driver/raw/master/MIDIDriver/snapshots'
    }
    mavenCentral()
    google()
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.core:core-ktx:1.13.1'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.annotation:annotation:1.8.2'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.viewpager2:viewpager2:1.1.0'
    implementation 'androidx.fragment:fragment:1.8.4'
    implementation 'jp.kshoji:midi-driver:0.1.5:@aar'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
}
